"""Documentation for backend/apps/products/models.py."""

from django.db import models


class Category(models.Model):
    """Product categories"""
    name = models.CharField(max_length=100, unique=True)
    description = models.TextField(blank=True, null=True)
    created_at = models.DateTimeField(auto_now_add=True)
    
    class Meta:
        """Represents the Meta class in this module."""
        verbose_name_plural = 'categories'
        ordering = ['name']
    
    def __str__(self):
        """Handles the __str__ behavior for this module."""
        return self.name


class Product(models.Model):
    """Medical equipment products"""
    category = models.ForeignKey(Category, on_delete=models.SET_NULL, null=True, related_name='products')
    sku = models.CharField(max_length=100, unique=True)
    name = models.CharField(max_length=255)
    description = models.TextField()
    price = models.DecimalField(max_digits=10, decimal_places=2)
    stock = models.IntegerField(default=0)
    available = models.BooleanField(default=True)
    image = models.ImageField(upload_to='products/', blank=True, null=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)
    
    class Meta:
        """Represents the Meta class in this module."""
        ordering = ['-created_at']
        indexes = [
            models.Index(fields=['category']),
            models.Index(fields=['available']),
        ]
    
    def __str__(self):
        """Handles the __str__ behavior for this module."""
        return self.name
